[package]
name = "mpu6050"
version = "0.2.0"
edition = "2021"

description = "Platform agnostic driver for MPU6050 6-axis IMU"
repository = "https://github.com/BloodWalrus/mpu6050improved"
readme = "README.md"
keywords = ["mpu6050", "imu", "embedded"]
license = "MIT"

[dependencies]
embedded-hal = "0.2.4"
glam = "0.21.2"
